--- a/C1_W3_Assignment.ipynb
+++ b/C1_W3_Assignment.ipynb
@@ -156,7 +156,7 @@
     "...\n",
     "```\n",
     "\n",
-    "Sentiment is one of three classes: negative (-1), neutral (0), or positive (1).  Autopilot requires that the target variable, `sentiment` is first and the set of features, just `review_body` in this case, come next.\n"
+    "Sentiment is one of three classes: negative (-1), neutral (0), and positive (1).  Autopilot requires that the target variable, `sentiment` is first and the set of features, just `review_body` in this case, come next.\n"
    ]
   },
   {
